# a4tasks

./: .gitignore  .travis.yml  CMakeLists.txt  CPPLINT.cfg  Makefile  README.md
src/: a4tasks.cpp  common.cpp  common.h  input_file.cpp  input_file.h  main.cpp  managed_thread.h  monitor.cpp  monitor.h  monitor_thread.cpp  monitor_thread.h  simulator.cpp  simulator.h  task.h  task_id.cpp  task_id.h  task_manager.cpp  task_manager.h  task_thread.cpp  task_thread.h  thread_manager.cpp  thread_manager.h
test/: t1.txt  t2.txt  t3.txt  t4.txt  t5.txt  t6.txt  t7.txt  t8.txt  t9.txt
